Fix sponsors logos alignment

--- a/theme/pycones23_en/static/assets/css/main.css
+++ b/theme/pycones23_en/static/assets/css/main.css
@@ -1128,47 +1128,37 @@ details p {
 }
 
 
-
-/* Sponsor cards */
+/* Sponsors */
+.sponsors-grid {
+  display: grid;
+  grid-gap: 1.5rem;
+  align-items: center;
+  margin: 1rem 0;
+}
 
 /* sponsor special */
 .special-grid {
-  display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-gap: 20px;
-  margin: 1rem 0;
 }
 
 /* Timanfaya */
 .timanfaya-grid {
-  display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-gap: 20px;
-  margin: 1rem 0;
 }
 
 /* Teneguía */
 .teneguia-grid {
-  display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: 20px;
-  margin: 1rem 0;
 }
 
 /* Tamadaba */
 .tamadaba-grid {
-  display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 20px;
-  margin: 1rem 0;
 }
 
 /* Teide */
 .teide-grid {
-  display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
-  margin: 1rem 0;
 }
 
 @media (max-width: 910px) {
